objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Certificates_not_appearing__c</fullName>
        <inlineHelpText>Application question:</inlineHelpText>
        <label>4.1.8.5 SW: certificates not in list</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_in_Role__c</fullName>
        <label>Change in Role</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Choosing_Job_Placements_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summer Choosing Job Placements complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Choosing_exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Choosing exclusion dates - complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chronic_Conditions__c</fullName>
        <inlineHelpText>Application question: Chronic Conditions</inlineHelpText>
        <label>4.1.8.3.2 SW: Chronic Conditions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allergies (severe)</fullName>
                </value>
                <value>
                    <fullName>Arthritis</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Cerebral Palsy</fullName>
                </value>
                <value>
                    <fullName>Chronic Obstructive Pulmonary Disease</fullName>
                </value>
                <value>
                    <fullName>Crohn’s disease</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Epstein Barr</fullName>
                </value>
                <value>
                    <fullName>HIV/Aids</fullName>
                </value>
                <value>
                    <fullName>Lupus</fullName>
                </value>
                <value>
                    <fullName>Obesity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chronic_conditions_other__c</fullName>
        <label>4.1.8.3.2.2 SW: chronic condition detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cluster_selected__c</fullName>
        <formula>IF( RecordTypeId = &quot;012C0000000QBBE&quot;, TEXT( Training_location__c ), 
IF(RecordTypeId = &quot;012C0000000QCjZ&quot;,  Contact__r.School_s_cluster__c , 
IF(OR(RecordTypeId = &quot;012C0000000QFyh&quot;, RecordTypeId = &quot;012C0000000QO3L&quot;,RecordTypeId = &quot;012C0000000QFyc&quot;)

, &quot;2014 MRK&quot;, 

IF(OR(RecordTypeId = &quot;012C0000000QYFD&quot;, RecordTypeId = &quot;012C0000000QYFE&quot;,RecordTypeId = &quot;012C0000000QZxW&quot;)

,&quot;BlackCountry&quot;,

IF( App_form_page_3_complete__c  =TRUE,

IF(ISPICKVAL(Contact__r.Cluster_2012__c,&quot;&quot;),&quot;&quot;,
&quot;2016 &quot;&amp;TEXT(Contact__r.Cluster_2012__c))
,&quot;&quot;)

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster selected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_update__c</fullName>
        <label>Cluster update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bradford</fullName>
                </value>
                <value>
                    <fullName>Barnet, Camden, Islington, Kensington &amp; Chelsea, Westminster and Hammersmith &amp; Fulham</fullName>
                </value>
                <value>
                    <fullName>Coventry, Solihull, N Warwickshire and S Warwickshire</fullName>
                </value>
                <value>
                    <fullName>Croydon, Lambeth and Southwark</fullName>
                </value>
                <value>
                    <fullName>Ealing, Hounslow and Richmond</fullName>
                </value>
                <value>
                    <fullName>Epsom &amp; Ewell, Mole Valley, Elmbridge, Reigate &amp; Banstead and Tandridge</fullName>
                </value>
                <value>
                    <fullName>Greenwich, Bexley, Bromley and Lewisham</fullName>
                </value>
                <value>
                    <fullName>Hillingdon, Harrow and Brent</fullName>
                </value>
                <value>
                    <fullName>Leeds and Wakefield</fullName>
                </value>
                <value>
                    <fullName>Manchester, Bury, Wigan and Leigh</fullName>
                </value>
                <value>
                    <fullName>North Birmingham and South Birmingham</fullName>
                </value>
                <value>
                    <fullName>Preston, Blackburn, Burnley, West Lancs and Blackpool</fullName>
                </value>
                <value>
                    <fullName>Reading and West Berkshire</fullName>
                </value>
                <value>
                    <fullName>Redbridge, Havering, Barking &amp; Dagenham and Newham</fullName>
                </value>
                <value>
                    <fullName>Stockport, Oldham, Rochdale and Tameside</fullName>
                </value>
                <value>
                    <fullName>Waltham Forest, Enfield, Haringey, Hackney and Tower Hamlets</fullName>
                </value>
                <value>
                    <fullName>Wandsworth, Merton, Kingston and Sutton</fullName>
                </value>
                <value>
                    <fullName>Woking, Guildford and Spelthorne</fullName>
                </value>
                <value>
                    <fullName>Wolverhampton, Walsall, Sandwell and Dudley</fullName>
                </value>
                <value>
                    <fullName>Wycombe, Slough and Bracknell Forest</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster_whilst_on_TC__c</fullName>
        <description>Used with AM application records</description>
        <formula>Contact__r.Cluster__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows which cluster the YP is currently connected to</inlineHelpText>
        <label>TCS Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidence_with_public_speaking__c</fullName>
        <inlineHelpText>Question on form: How happy do you feel standing up and talking in front of a group? (scale 1=miserable and 10=delighted)</inlineHelpText>
        <label>Confidence with public speaking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_send_email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this box to confirm that email should be sent</description>
        <inlineHelpText>Select this box to confirm that email should be sent</inlineHelpText>
        <label>Confirmation: send email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conflict_in_role__c</fullName>
        <label>Conflict in role</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Considered_for_SAM__c</fullName>
        <label>Considered for SAM?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName + &apos; &apos; +  Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_s_Rehire_Status__c</fullName>
        <description>Displays the rehire status for the job application&apos;s related contact.</description>
        <formula>TEXT(Contact__r.Rehire_status__c)</formula>
        <label>Contact&apos;s Rehire Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Stage__c</fullName>
        <description>This is a multi-picklist field to outline whether a DAPM/PAD has been sent a contract and record their response. This is manually updated by Staffing.</description>
        <inlineHelpText>This is a multi-picklist field to outline whether a DAPM/PAD has been sent a contract and record their response. This is manually updated by Staffing.</inlineHelpText>
        <label>Contract Stage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting response</fullName>
                </value>
                <value>
                    <fullName>Contract Response - No</fullName>
                </value>
                <value>
                    <fullName>Contract Response - Yes</fullName>
                </value>
                <value>
                    <fullName>Contract sent via email</fullName>
                </value>
                <value>
                    <fullName>Handover Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Convictions_Reprimands_Warnings_Detail__c</fullName>
        <inlineHelpText>Please provide details of your criminal record</inlineHelpText>
        <label>HSI1.2B: Convict Reprim Warnings Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Convictions_Reprimands_Warnings__c</fullName>
        <inlineHelpText>Do you have any convictions, cautions, reprimands or final warnings which are not ‘protected’ as defined by the Rehabilitation of Offenders Act 1974 (Exceptions) Order 1975 (as amended in 2013)?</inlineHelpText>
        <label>HSI1B: Convictions, Reprimands Warnings?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_occupation__c</fullName>
        <inlineHelpText>Application question: What is your current occupation?</inlineHelpText>
        <label>Current occupation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creative/Specialist</fullName>
                </value>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Emergency Services</fullName>
                </value>
                <value>
                    <fullName>HM Force</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Office Staff/Clerical</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Sales Assistant/Service Staff</fullName>
                </value>
                <value>
                    <fullName>Sales Person</fullName>
                </value>
                <value>
                    <fullName>Senior Executive</fullName>
                </value>
                <value>
                    <fullName>Skilled Worker</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Teacher</fullName>
                </value>
                <value>
                    <fullName>Unskilled Worker</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Youth Worker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAPMS_on_Hold__c</fullName>
        <description>This is used to identify, to the wider staffing team, where a particular candidate has been offered a primary role of DAPM/Pad. The two options in this field outline whether someone should be kept &apos;on hold&apos; as a reserve/back-up DAPM/PAD or can be &apos;released&apos; to complete a different seasonal role. This is manually updated by Staffing.</description>
        <inlineHelpText>This is used to identify where a candidate has been offered a primary role of DAPM/Pad. The two options in this field outline whether someone should be kept &apos;on hold&apos; as a reserve/back-up DAPM/PAD or can be &apos;released&apos; to complete a different seasonal role</inlineHelpText>
        <label>DAPMS on Hold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ON HOLD</fullName>
                </value>
                <value>
                    <fullName>RELEASED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_Notes__c</fullName>
        <label>DBS Notes - Confidential</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DBS_Provider__c</fullName>
        <label>DBS Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GB Group</fullName>
                </value>
                <value>
                    <fullName>Existing DBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_authorised__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox will be automatically checked when &quot;Which DBS steps have been met?&quot; includes &quot;DBS approved&quot; and &quot;DBS docs witnessed&quot;.
It is not editable by anyone.</inlineHelpText>
        <label>DBS authorised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBS_certificate_upload_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DBS certificate upload complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBS_doc_upload_indicated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates whether an applicant submitted a DBS when they applied for the role.</inlineHelpText>
        <label>DBS uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBS_docs_witnessed__c</fullName>
        <inlineHelpText>This indiciates whether a scanned DBS has been witnessed.</inlineHelpText>
        <label>DBS docs witnessed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_indicated_on_application__c</fullName>
        <inlineHelpText>This indicates at which point an applicant is in the DBS process. It is updated by Evolution and GB Group.</inlineHelpText>
        <label>DBS indicated on application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - no file / unreadable</fullName>
                </value>
                <value>
                    <fullName>Yes - not validated</fullName>
                </value>
                <value>
                    <fullName>Valid DBS received</fullName>
                </value>
                <value>
                    <fullName>Yes - not valid, resend Care Check request</fullName>
                </value>
                <value>
                    <fullName>No - Care Check requested</fullName>
                </value>
                <value>
                    <fullName>No - Care Check now received</fullName>
                </value>
                <value>
                    <fullName>No, Candidate yet to engage</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - not valid</fullName>
                </value>
                <value>
                    <fullName>Valid DBS received - approval required</fullName>
                </value>
                <value>
                    <fullName>Applying through GB Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_on_after_april__c</fullName>
        <inlineHelpText>Application question: Do you have a cleared DBS certificate dated on or after April 2014</inlineHelpText>
        <label>DBS uploaded on app form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_status_del__c</fullName>
        <description>Please see documentation here for explanation:

https://docs.google.com/document/d/1bPXSNGygmg2t0jT8aYxSjh4Pc1dpHEbq089Cb4BFGwY/edit</description>
        <formula>IF(ISPICKVAL( DBS_indicated_on_application__c , &quot;No, Candidate yet to engage&quot;), &quot;Candidate yet to engage with DBS process&quot;, 

IF(OR(
ISPICKVAL( DBS_indicated_on_application__c ,&quot;Yes - not valid&quot;),
ISPICKVAL( DBS_indicated_on_application__c ,&quot;Yes - no file / unreadable&quot;)
), &quot;The DBS submitted is invalid, candidate requested to resubmit or start of finish new application&quot;
,

IF(ISPICKVAL( DBS_indicated_on_application__c ,&quot;Yes - not validated&quot;)
,&quot;DBS Submitted awaiting checking&quot;,

IF(ISPICKVAL( DBS_indicated_on_application__c ,&quot;Applying through GB Group&quot;),

IF(ISPICKVAL( Disclosure_outcome__c,&quot;&quot; ),

IF(ISBLANK( Verified_Date__c ),&quot;DBS application started with GB Group awaiting document verification&quot;,&quot;DBS Submitted awaiting checking&quot;)

,

IF(ISPICKVAL( Disclosure_outcome__c,&quot;Clear&quot; ),&quot;DBS process complete, documents checked and valid DBS received&quot;,

IF(ISPICKVAL( TCN_Approval__c ,&quot;Reject due to DBS&quot;),&quot;Candidate rejected due to DBS&quot;,

IF(ISPICKVAL( TCN_Approval__c ,&quot;&quot;),

IF(  Hard_Copy_DBS_received__c = TRUE,&quot;DBS has a listing, awaiting sign off by Staffing Manager&quot;,&quot;DBS has listings, need to see copy if we haven&apos;t already&quot;),

IF( ISPICKVAL(DBS_docs_witnessed__c,&quot;&quot;) ,&quot;Valid DBS received, hard copy yet to be witnessed&quot;,&quot;DBS process complete, documents checked and valid DBS received&quot;)

)

)

)

)

,

IF(ISPICKVAL( DBS_indicated_on_application__c , &quot;Valid DBS received - approval required&quot;),

IF(ISPICKVAL( TCN_Approval__c ,&quot;Reject due to DBS&quot;),&quot;Candidate rejected due to DBS&quot;,

IF(ISPICKVAL( TCN_Approval__c ,&quot;&quot;),

IF(  Hard_Copy_DBS_received__c = TRUE,&quot;DBS has a listing, awaiting sign off by Staffing Manager&quot;,&quot;DBS has listings, need to see copy if we haven&apos;t already&quot;),

IF( ISPICKVAL(DBS_docs_witnessed__c,&quot;&quot;) ,&quot;Valid DBS received, hard copy yet to be witnessed&quot;,&quot;DBS process complete, documents checked and valid DBS received&quot;)

)

)

,

IF( ISPICKVAL(DBS_docs_witnessed__c,&quot;&quot;) ,&quot;Valid DBS received, hard copy yet to be witnessed&quot;,&quot;DBS process complete, documents checked and valid DBS received&quot;)

)

)

)

)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBS status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Assessment_Postponed_Email_Sent__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Assessment Postponed Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_JPs_confirmed_TT__c</fullName>
        <label>Date JPs confirmed (TT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_alternative_assessment_arranged__c</fullName>
        <description>Date/time stamp - read-only for Staffing</description>
        <label>Date alternative assessment arranged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_application_completed__c</fullName>
        <label>Date application completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_application_incomplete_email_sent__c</fullName>
        <label>Date application incomplete email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_applied__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date application started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_assessment_confirmation_sent__c</fullName>
        <inlineHelpText>Assessment confirmation: 1.4.1</inlineHelpText>
        <label>Date assessment confirmation sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_assessment_invite_reminder_sent__c</fullName>
        <inlineHelpText>Invitation to assessment reminder: 1.3.4</inlineHelpText>
        <label>Date assessment invite reminder sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_assessment_recorded_TT__c</fullName>
        <label>Date assessment recorded (TT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_assessment_reminder_sent__c</fullName>
        <description>Date that automatic assessment reminder is sent</description>
        <inlineHelpText>Assessment confirmation reminder: 1.5.1</inlineHelpText>
        <label>Date assess.confirmation reminder sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_auto_reject_email_sent__c</fullName>
        <inlineHelpText>This shows that a post-screen rejection email has been sent
Standard rejection: 1.3.2
Under-age rejection: 1.3.3</inlineHelpText>
        <label>Date post-screen reject email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_call_made_to_referee_1__c</fullName>
        <label>Date last call made to referee 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_call_made_to_referee_2__c</fullName>
        <label>Date last call made to referee 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_candidate_invited_to_assessment__c</fullName>
        <inlineHelpText>Invitation to assessment: 1.3.1</inlineHelpText>
        <label>Date invitation to assessment sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_care_check_update_sent__c</fullName>
        <label>Date last DBS update sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_dismissed__c</fullName>
        <label>Date dismissed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_feedback_submitted__c</fullName>
        <label>Date feedback submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_non_attendance_email_5_1_sent__c</fullName>
        <label>Date non-attendance email (5.1) sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>Contact__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_withdrawal_notification__c</fullName>
        <label>Date of withdrawal notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_offer_training_WSO_email_resent__c</fullName>
        <description>Used with summer staff application system to sent offer emails.</description>
        <inlineHelpText>Updates each time this email is sent 
Standard offer: 1.6.1 (contains training registration and all necessary info request
PV offer: 1.6.2</inlineHelpText>
        <label>Date last offer email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_post_assessment_rejection_sent__c</fullName>
        <description>Date that post-assessment rejection email is sent to candidate</description>
        <inlineHelpText>Email template: 1.6.3</inlineHelpText>
        <label>Date post-assessment rejection sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_salary_approved__c</fullName>
        <inlineHelpText>Date/time that APM/PM approved salary. If it is after 9 am on Monday, the salary amount will not be paid until next week</inlineHelpText>
        <label>Date salary approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_screened__c</fullName>
        <label>Date screened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_staff_feedback_request_sent__c</fullName>
        <description>Date that staff feedback request sent</description>
        <inlineHelpText>Email templates:
Summer staff feedback request: 9.1
Feedback request reminder: 9.2</inlineHelpText>
        <label>Date last staff feedback request sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_staff_feedback_submitted__c</fullName>
        <description>Date that staff submitted feedback</description>
        <label>Date staff feedback submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_staff_thank_you_email_sent__c</fullName>
        <description>Date that email is sent to returners, asking them to reapply</description>
        <label>Date returner invitation sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_time_DBS_certificate_witnessed__c</fullName>
        <inlineHelpText>Should only be entered when the correct, physical ID docs have been witnessed</inlineHelpText>
        <label>Date/time DBS certificate witnessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_time_HS_I_form_submitted__c</fullName>
        <label>Date/time HS &amp; I form submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_time_absences_approved__c</fullName>
        <label>Date/time absences approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_time_calender_last_viewed__c</fullName>
        <label>Date/time calendar last viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_time_last_14_day_SAW_email_sent__c</fullName>
        <label>Date/time last 14-day SAW email sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_time_last_SAW_login_info_sent__c</fullName>
        <label>Date/time last SAW login info sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_training_confirmation_reminder_sent__c</fullName>
        <inlineHelpText>Email template: 3.1</inlineHelpText>
        <label>Date training confirmation reminder sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_training_invite_email_sent__c</fullName>
        <label>Date training invite email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dates_1st_choice__c</fullName>
        <label>Dates: 1st choice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mon 30th Jun - Thu 4th Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 7th Jul - Thu 10th Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 14th Jul - Thu 17th Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 21st Jul - Thu 24th Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 28th Jul - Thu 31st Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 4th Aug - Thu 7th Aug</fullName>
                </value>
                <value>
                    <fullName>Mon 11th Aug - Thu 14th Aug</fullName>
                </value>
                <value>
                    <fullName>Mon 18th Aug - Fri 22nd Aug</fullName>
                </value>
                <value>
                    <fullName>Mon 25th Aug - Thu 28th Aug</fullName>
                </value>
                <value>
                    <fullName>Thu 28th Aug - Sun 31st Aug</fullName>
                </value>
                <value>
                    <fullName>Thursday 30th August - Sunday 2nd September</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dates_2nd_choice__c</fullName>
        <description>For SAMs and AMs - second choice work date</description>
        <label>Dates: 2nd choice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mon 30th Jun - Thu 4th Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 7th Jul - Thu 10th Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 14th Jul - Thu 17th Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 21st Jul - Thu 24th Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 28th Jul - Thu 31st Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 4th Aug - Thu 7th Aug</fullName>
                </value>
                <value>
                    <fullName>Mon 11th Aug - Thu 14th Aug</fullName>
                </value>
                <value>
                    <fullName>Mon 18th Aug - Fri 22nd Aug</fullName>
                </value>
                <value>
                    <fullName>Mon 25th Aug - Thu 28th Aug</fullName>
                </value>
                <value>
                    <fullName>Thu 28th Aug - Sun 31st Aug</fullName>
                </value>
                <value>
                    <fullName>Thursday 30th August - Sunday 2nd September</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dates_selected__c</fullName>
        <label>Dates selected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Thursday 30th August - Sunday 2nd September</fullName>
                </value>
                <value>
                    <fullName>Mon 7th Jul - Thu 10th Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 14th Jul - Thu 17th Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 21st Jul - Thu 24th Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 28th Jul - Thu 31st Jul</fullName>
                </value>
                <value>
                    <fullName>Mon 4th Aug - Thu 7th Aug</fullName>
                </value>
                <value>
                    <fullName>Mon 11th Aug - Thu 14th Aug</fullName>
                </value>
                <value>
                    <fullName>Mon 18th Aug - Fri 22nd Aug</fullName>
                </value>
                <value>
                    <fullName>Mon 25th Aug - Thu 28th Aug</fullName>
                </value>
                <value>
                    <fullName>Thu 28th Aug - Sun 31st Aug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>